--- a/src/index.html
+++ b/src/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html dir="ltr" lang="en">
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0">
-  <title>Stencil Component Starter</title>
-  <script src="/build/mycomponent.js"></script>
-
-</head>
-<body>
-
-  <my-component first="Stencil" last="'Don't call me a framework' JS"></my-component>
-
-</body>
+  <head>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0"
+    />
+    <title>Stencil Component Starter</title>
+    <script src="/build/crds-components.js"></script>
+  </head>
+  <body>
+    <like-button id="12345"></like-button>
+    <like-button id="abcd123"></like-button>
+    <like-button id="jhkj3h4kjhdsn"></like-button>
+  </body>
 </html>
