US15645 Like Button Implement UI

--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,8 @@
     <script src="/build/crds-components.js"></script>
   </head>
   <body>
-    <like-button id="12345"></like-button>
-    <like-button id="abcd123"></like-button>
+    <like-button id="12345"></like-button><br />
+    <like-button id="abcd123"></like-button><br />
     <like-button id="jhkj3h4kjhdsn"></like-button>
   </body>
 </html>
