US15645 Like Button Wire up lambda request

--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,6 @@
     <script src="/build/crds-components.js"></script>
   </head>
   <body>
-    <like-button id="12345"></like-button><br />
-    <like-button id="abcd123"></like-button><br />
-    <like-button id="jhkj3h4kjhdsn"></like-button>
+    <like-button id="46nvbu45ig22K0kWESiiuc"></like-button><br />
   </body>
 </html>
