--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,11 @@
     />
     <title>Stencil Component Starter</title>
     <script src="/build/crds-components.js"></script>
+    <script>
+      (function() {
+        window.CRDS = window.CRDS || {};
+      })();
+    </script>
   </head>
   <body>
     <like-button id="46nvbu45ig22K0kWESiiuc"></like-button><br />
