US15645 Like Button Cleanup some regressions, abbreviate large counts

--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,6 @@
     <script src="/build/crds-components.js"></script>
   </head>
   <body>
-    <heart-button id="46nvbu45ig22K0kWESiiuc" />
+    <heart-button id="4D9pCED9eM0GOQCOKyY0mS" />
   </body>
 </html>
