--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,12 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0"
     />
+    <!--
+      <meta property="cfl:space_id" content="...">
+      <meta property="cfl:env" content="master">
+      <meta property="cfl:token" content="...">
+      <meta property="crds:interactions-endpoint" content="...">
+    -->
     <title>Stencil Component Starter</title>
     <script src="/build/crds-components.js"></script>
   </head>
