US17019 Front End Implement initial component

--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,8 @@
     <script src="/build/crds-components.js"></script>
   </head>
   <body>
+    <shared-header></shared-header>
+    <hr>
     <heart-button id="4D9pCED9eM0GOQCOKyY0mS" />
   </body>
 </html>
