US17019 Front End
add markup, icons and styles for blue bar

injectGlobal sass paths for variables
add crds-styles
remove margin from stencil default template
add stylelint and prettier
add Storybook badge on Readme

--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,13 @@
       <meta property="crds:interactions-endpoint" content="...">
     -->
     <title>Stencil Component Starter</title>
+
+    <style>
+      body {
+        margin: 0;
+      }
+    </style>
+
     <script src="/build/crds-components.js"></script>
   </head>
   <body>
