WIP - US17019 Front End

--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,9 @@
       }
     </style>
 
+    <script src=https://use.typekit.net/ccb3vpa.js></script>
+    <script>try{Typekit.load({ async: true });}catch(e){}</script>
+
     <script src="/build/crds-components.js"></script>
   </head>
   <body>
