US17134 typekit font issue in storybook
add typekit to storybook's .preview-head.html file

--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -1,1 +1,4 @@
 <script src="/build/crds-components.js"></script>
+
+<script src=https://use.typekit.net/ccb3vpa.js></script>
+<script>try{Typekit.load({ async: true });}catch(e){}</script>
