Add crds-styles to index page

--- a/src/index.html
+++ b/src/index.html
@@ -6,13 +6,17 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0"
     />
+
     <!--
       <meta property="cfl:space_id" content="...">
       <meta property="cfl:env" content="master">
       <meta property="cfl:token" content="...">
       <meta property="crds:interactions-endpoint" content="...">
     -->
-    <title>Stencil Component Starter</title>
+
+    <title>Crossroads Component Library</title>
+
+    <link rel="stylesheet" href="//d1tmclqz61gqwd.cloudfront.net/styles/crds-styles-3.2.3.min.css" />
 
     <style>
       body {
@@ -27,14 +31,15 @@
   </head>
   <body>
     <shared-header src="/data/navigation.json"></shared-header>
+
     <div class="container">
       <h1>A page</h1>
       <p>Sint mollit incididunt occaecat laborum esse duis minim nostrud incididunt nostrud cillum culpa excepteur nulla ut duis laborum consequat in enim elit reprehenderit ullamco voluptate nulla sed consequat in est reprehenderit fugiat irure ullamco reprehenderit sit dolore in dolor enim qui commodo veniam duis sunt proident ut consectetur sed pariatur et officia exercitation minim eu eu eiusmod sit enim anim ut reprehenderit officia consequat cupidatat voluptate enim excepteur dolor magna duis ullamco exercitation duis consectetur irure fugiat elit sunt id ut dolor irure amet veniam enim esse irure est minim proident fugiat in proident magna est magna incididunt laborum et magna et veniam enim velit cillum laborum in cupidatat adipisicing nostrud esse quis duis do veniam laborum cupidatat ex irure sed dolor ea in veniam id commodo mollit nulla laboris dolore commodo aliqua nulla aute in enim deserunt sint enim nostrud esse eu irure qui anim laboris sed duis aliquip aliquip consectetur amet nisi esse cupidatat commodo esse proident irure occaecat culpa adipisicing ad tempor esse ut ut cupidatat officia voluptate ut nulla incididunt magna ut ad quis amet exercitation nisi elit tempor excepteur et laboris fugiat consectetur est dolor laboris incididunt anim irure cillum sint occaecat et officia non sit ut fugiat in sit sunt dolor incididunt magna exercitation ad consectetur dolore sint cupidatat aute minim irure enim veniam reprehenderit consectetur fugiat nisi culpa est velit eu velit reprehenderit sed do ullamco dolore eiusmod nostrud ad pariatur eu sit est non eu reprehenderit sed sed adipisicing labore do.</p>      <p>Sint mollit incididunt occaecat laborum esse duis minim nostrud incididunt nostrud cillum culpa excepteur nulla ut duis laborum consequat in enim elit reprehenderit ullamco voluptate nulla sed consequat in est reprehenderit fugiat irure ullamco reprehenderit sit dolore in dolor enim qui commodo veniam duis sunt proident ut consectetur sed pariatur et officia exercitation minim eu eu eiusmod sit enim anim ut reprehenderit officia consequat cupidatat voluptate enim excepteur dolor magna duis ullamco exercitation duis consectetur irure fugiat elit sunt id ut dolor irure amet veniam enim esse irure est minim proident fugiat in proident magna est magna incididunt laborum et magna et veniam enim velit cillum laborum in cupidatat adipisicing nostrud esse quis duis do veniam laborum cupidatat ex irure sed dolor ea in veniam id commodo mollit nulla laboris dolore commodo aliqua nulla aute in enim deserunt sint enim nostrud esse eu irure qui anim laboris sed duis aliquip aliquip consectetur amet nisi esse cupidatat commodo esse proident irure occaecat culpa adipisicing ad tempor esse ut ut cupidatat officia voluptate ut nulla incididunt magna ut ad quis amet exercitation nisi elit tempor excepteur et laboris fugiat consectetur est dolor laboris incididunt anim irure cillum sint occaecat et officia non sit ut fugiat in sit sunt dolor incididunt magna exercitation ad consectetur dolore sint cupidatat aute minim irure enim veniam reprehenderit consectetur fugiat nisi culpa est velit eu velit reprehenderit sed do ullamco dolore eiusmod nostrud ad pariatur eu sit est non eu reprehenderit sed sed adipisicing labore do.</p>      <p>Sint mollit incididunt occaecat laborum esse duis minim nostrud incididunt nostrud cillum culpa excepteur nulla ut duis laborum consequat in enim elit reprehenderit ullamco voluptate nulla sed consequat in est reprehenderit fugiat irure ullamco reprehenderit sit dolore in dolor enim qui commodo veniam duis sunt proident ut consectetur sed pariatur et officia exercitation minim eu eu eiusmod sit enim anim ut reprehenderit officia consequat cupidatat voluptate enim excepteur dolor magna duis ullamco exercitation duis consectetur irure fugiat elit sunt id ut dolor irure amet veniam enim esse irure est minim proident fugiat in proident magna est magna incididunt laborum et magna et veniam enim velit cillum laborum in cupidatat adipisicing nostrud esse quis duis do veniam laborum cupidatat ex irure sed dolor ea in veniam id commodo mollit nulla laboris dolore commodo aliqua nulla aute in enim deserunt sint enim nostrud esse eu irure qui anim laboris sed duis aliquip aliquip consectetur amet nisi esse cupidatat commodo esse proident irure occaecat culpa adipisicing ad tempor esse ut ut cupidatat officia voluptate ut nulla incididunt magna ut ad quis amet exercitation nisi elit tempor excepteur et laboris fugiat consectetur est dolor laboris incididunt anim irure cillum sint occaecat et officia non sit ut fugiat in sit sunt dolor incididunt magna exercitation ad consectetur dolore sint cupidatat aute minim irure enim veniam reprehenderit consectetur fugiat nisi culpa est velit eu velit reprehenderit sed do ullamco dolore eiusmod nostrud ad pariatur eu sit est non eu reprehenderit sed sed adipisicing labore do.</p>
     </div>
-    <shared-footer></shared-footer>
 
-    <!-- <hr>
-    <heart-button id="4D9pCED9eM0GOQCOKyY0mS" /> -->
+    <heart-button id="4D9pCED9eM0GOQCOKyY0mS" />
+
+    <shared-footer></shared-footer>
 
     <script>
       window.CRDS = window.CRDS || {};
