USXXXXX - crds-components-index Add jumbotron to index page

--- a/src/index.html
+++ b/src/index.html
@@ -33,58 +33,22 @@
   <body>
     <shared-header src="/data/navigation.json"></shared-header>
 
-    <div class="container">
-      <h1>A page</h1>
+    <div class="jumbotron jumbotron-xl" style="margin-top: 100px; background-image: url('//crds-cms-uploads.imgix.net/content/images/streaming-anywhere-hero-off.jpg?auto=format,compress&amp;w=100&amp;fit=crop');">
+      <p class="small-heading text-uppercase">I am a small intro heading</p>
+      <h1 class="title">the main heading</h1>
       <p>
-        Sint mollit incididunt occaecat laborum esse duis minim nostrud incididunt nostrud cillum culpa excepteur nulla
-        ut duis laborum consequat in enim elit reprehenderit ullamco voluptate nulla sed consequat in est reprehenderit
-        fugiat irure ullamco reprehenderit sit dolore in dolor enim qui commodo veniam duis sunt proident ut consectetur
-        sed pariatur et officia exercitation minim eu eu eiusmod sit enim anim ut reprehenderit officia consequat
-        cupidatat voluptate enim excepteur dolor magna duis ullamco exercitation duis consectetur irure fugiat elit sunt
-        id ut dolor irure amet veniam enim esse irure est minim proident fugiat in proident magna est magna incididunt
-        laborum et magna et veniam enim velit cillum laborum in cupidatat adipisicing nostrud esse quis duis do veniam
-        laborum cupidatat ex irure sed dolor ea in veniam id commodo mollit nulla laboris dolore commodo aliqua nulla
-        aute in enim deserunt sint enim nostrud esse eu irure qui anim laboris sed duis aliquip aliquip consectetur amet
-        nisi esse cupidatat commodo esse proident irure occaecat culpa adipisicing ad tempor esse ut ut cupidatat
-        officia voluptate ut nulla incididunt magna ut ad quis amet exercitation nisi elit tempor excepteur et laboris
-        fugiat consectetur est dolor laboris incididunt anim irure cillum sint occaecat et officia non sit ut fugiat in
-        sit sunt dolor incididunt magna exercitation ad consectetur dolore sint cupidatat aute minim irure enim veniam
-        reprehenderit consectetur fugiat nisi culpa est velit eu velit reprehenderit sed do ullamco dolore eiusmod
-        nostrud ad pariatur eu sit est non eu reprehenderit sed sed adipisicing labore do.
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+        Repudiandae quos reiciendis vitae eum.
       </p>
-      <p>
-        Sint mollit incididunt occaecat laborum esse duis minim nostrud incididunt nostrud cillum culpa excepteur nulla
-        ut duis laborum consequat in enim elit reprehenderit ullamco voluptate nulla sed consequat in est reprehenderit
-        fugiat irure ullamco reprehenderit sit dolore in dolor enim qui commodo veniam duis sunt proident ut consectetur
-        sed pariatur et officia exercitation minim eu eu eiusmod sit enim anim ut reprehenderit officia consequat
-        cupidatat voluptate enim excepteur dolor magna duis ullamco exercitation duis consectetur irure fugiat elit sunt
-        id ut dolor irure amet veniam enim esse irure est minim proident fugiat in proident magna est magna incididunt
-        laborum et magna et veniam enim velit cillum laborum in cupidatat adipisicing nostrud esse quis duis do veniam
-        laborum cupidatat ex irure sed dolor ea in veniam id commodo mollit nulla laboris dolore commodo aliqua nulla
-        aute in enim deserunt sint enim nostrud esse eu irure qui anim laboris sed duis aliquip aliquip consectetur amet
-        nisi esse cupidatat commodo esse proident irure occaecat culpa adipisicing ad tempor esse ut ut cupidatat
-        officia voluptate ut nulla incididunt magna ut ad quis amet exercitation nisi elit tempor excepteur et laboris
-        fugiat consectetur est dolor laboris incididunt anim irure cillum sint occaecat et officia non sit ut fugiat in
-        sit sunt dolor incididunt magna exercitation ad consectetur dolore sint cupidatat aute minim irure enim veniam
-        reprehenderit consectetur fugiat nisi culpa est velit eu velit reprehenderit sed do ullamco dolore eiusmod
-        nostrud ad pariatur eu sit est non eu reprehenderit sed sed adipisicing labore do.
-      </p>
-      <p>
-        Sint mollit incididunt occaecat laborum esse duis minim nostrud incididunt nostrud cillum culpa excepteur nulla
-        ut duis laborum consequat in enim elit reprehenderit ullamco voluptate nulla sed consequat in est reprehenderit
-        fugiat irure ullamco reprehenderit sit dolore in dolor enim qui commodo veniam duis sunt proident ut consectetur
-        sed pariatur et officia exercitation minim eu eu eiusmod sit enim anim ut reprehenderit officia consequat
-        cupidatat voluptate enim excepteur dolor magna duis ullamco exercitation duis consectetur irure fugiat elit sunt
-        id ut dolor irure amet veniam enim esse irure est minim proident fugiat in proident magna est magna incididunt
-        laborum et magna et veniam enim velit cillum laborum in cupidatat adipisicing nostrud esse quis duis do veniam
-        laborum cupidatat ex irure sed dolor ea in veniam id commodo mollit nulla laboris dolore commodo aliqua nulla
-        aute in enim deserunt sint enim nostrud esse eu irure qui anim laboris sed duis aliquip aliquip consectetur amet
-        nisi esse cupidatat commodo esse proident irure occaecat culpa adipisicing ad tempor esse ut ut cupidatat
-        officia voluptate ut nulla incididunt magna ut ad quis amet exercitation nisi elit tempor excepteur et laboris
-        fugiat consectetur est dolor laboris incididunt anim irure cillum sint occaecat et officia non sit ut fugiat in
-        sit sunt dolor incididunt magna exercitation ad consectetur dolore sint cupidatat aute minim irure enim veniam
-        reprehenderit consectetur fugiat nisi culpa est velit eu velit reprehenderit sed do ullamco dolore eiusmod
-        nostrud ad pariatur eu sit est non eu reprehenderit sed sed adipisicing labore do.
+      <a class="btn btn-lg btn-primary" href="#">Call To Action</a>
+    </div>
+
+    <div class="container soft-sides push-ends">
+      <p class="lead text-center push-bottom">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ullamcorper mauris erat, id auctor quam tempus in.
+        Mauris neque mauris, tempor in cursus vel, consectetur ut lorem. Phasellus tristique mauris a arcu malesuada lacinia. Praesent sodales ultrices tincidunt. 
+        Curabitur sollicitudin varius turpis, ac cursus ex euismod quis. Curabitur a lacinia nisi, ac molestie mi. Phasellus malesuada, risus non ornare lacinia, 
+        nibh mi posuere lorem, vitae dignissim tellus nibh nec leo.
       </p>
 
       <heart-button id="4D9pCED9eM0GOQCOKyY0mS"></heart-button>
