--- a/src/index.html
+++ b/src/index.html
@@ -46,12 +46,12 @@
     <div class="container soft-sides push-ends">
       <p class="lead text-center push-bottom">
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ullamcorper mauris erat, id auctor quam tempus in.
-        Mauris neque mauris, tempor in cursus vel, consectetur ut lorem. Phasellus tristique mauris a arcu malesuada lacinia. Praesent sodales ultrices tincidunt. 
-        Curabitur sollicitudin varius turpis, ac cursus ex euismod quis. Curabitur a lacinia nisi, ac molestie mi. Phasellus malesuada, risus non ornare lacinia, 
+        Mauris neque mauris, tempor in cursus vel, consectetur ut lorem. Phasellus tristique mauris a arcu malesuada lacinia. Praesent sodales ultrices tincidunt.
+        Curabitur sollicitudin varius turpis, ac cursus ex euismod quis. Curabitur a lacinia nisi, ac molestie mi. Phasellus malesuada, risus non ornare lacinia,
         nibh mi posuere lorem, vitae dignissim tellus nibh nec leo.
       </p>
 
-      <heart-button id="4D9pCED9eM0GOQCOKyY0mS"></heart-button>
+      <!--heart-button id="4D9pCED9eM0GOQCOKyY0mS"></heart-button-->
     </div>
 
 
