US17326-automation-IDs         - Adds automation IDs to static JSON obj

--- a/src/index.html
+++ b/src/index.html
@@ -60,180 +60,329 @@
     <script>
       window.CRDS = window.CRDS || {};
       window.CRDS['navigation'] = [
+  {
+    "title": "Watch, Listen, Read",
+    "description": "Videos, music, articles and podcasts",
+    "background": "//crds-media.imgix.net/...",
+    "children": [
+      [
         {
-          title: 'Watch, Listen, Read',
-          description: 'Videos, music, articles and podcasts',
-          background: '//crds-media.imgix.net/...',
-          children: [
-            [
-              {
-                title: 'All Media',
-                path: '/media'
-              }
-            ],
-            'Types',
-            [
-              {
-                title: 'Articles',
-                path: '/media/articles'
-              },
-              {
-                title: 'Music',
-                path: '/media/music'
-              },
-              {
-                title: 'Podcasts',
-                path: '/media/podcasts'
-              },
-              {
-                title: 'Series',
-                path: '/media/series'
-              },
-              {
-                title: 'Videos',
-                path: '/media/videos'
-              }
-            ],
-            'Topics',
-            [
-              {
-                title: 'Culture',
-                path: '/media/topics/culture'
-              },
-              {
-                title: 'Self',
-                path: '/media/topics/self'
-              },
-              {
-                title: 'Work',
-                path: '/media/topics/work'
-              },
-              {
-                title: 'Money',
-                path: '/media/topics/money'
-              }
-            ]
-          ]
-        },
-        {
-          title: 'Find Community',
-          description: 'Groups, camps, serve locally and globally, kids',
-          background: '//crds-media.imgix.net/...',
-          children: [
-            'Connect',
-            [
-              {
-                title: 'Groups',
-                path: '#'
-              },
-              {
-                title: 'See who is nearby',
-                path: '#'
-              }
-            ],
-            'Camps',
-            [
-              {
-                title: 'Man Camp',
-                path: '#'
-              },
-              {
-                title: 'Woman Camp',
-                path: '#'
-              },
-              {
-                title: 'Couples Camp',
-                path: '#'
-              }
-            ],
-            'Serve',
-            [
-              {
-                title: 'Go',
-                path: '#'
-              },
-              {
-                title: 'Reachout',
-                path: '#'
-              },
-              {
-                title: 'Community Care',
-                path: '#'
-              },
-              {
-                title: 'All service opportunities',
-                path: '#'
-              }
-            ],
-            'Kids',
-            [
-              {
-                title: "Kids' Club",
-                path: '#'
-              },
-              {
-                title: 'Students 6-12th',
-                path: '#'
-              }
-            ]
-          ]
-        },
-        {
-          title: 'Come Visit',
-          description: 'Locations, (in person and online)',
-          background: '//crds-media.imgix.net/...',
-          children: [
-            [{ title: 'All Locations', path: '#' }, { title: 'Crossroads Anywhere', path: '#' }],
-            'Cincinnati Area',
-            [
-              { title: 'East Side', path: '#' },
-              { title: 'Florence', path: '#' },
-              { title: 'Mason', path: '#' },
-              { title: 'Oakley', path: '#' },
-              { title: 'Oxford', path: '#' },
-              { title: 'Uptown', path: '#' },
-              { title: 'West Side', path: '#' }
-            ],
-            'Central Kentucky Area',
-            [
-              { title: 'Lexington', path: '#' },
-              { title: 'Downtown Lexington', path: '#' },
-              { title: 'Georgetown', path: '#' },
-              { title: 'Dayton', path: '#' }
-            ],
-            'More in Ohio',
-            [{ title: 'Columbus', path: '#' }, { title: 'Dayton', path: '#' }],
-            'Correctional Institutions',
-            [
-              { title: 'Blackburn Correctional Complex', path: '#' },
-              { title: 'Dayton Correctional Institution', path: '#' },
-              { title: 'Lebanon Correctional Institution', path: '#' },
-              { title: 'London Correctional Institution', path: '#' },
-              { title: 'Marion Correctional Institution', path: '#' },
-              { title: 'Ohio Reformatory for Women', path: '#' },
-              { title: 'Warren Correctional Institution', path: '#' }
-            ]
-          ]
-        },
-        {
-          title: 'Get Support',
-          description: 'Counselors, prayer, live events, contact',
-          background: '//crds-media.imgix.net/...',
-          children: [
-            'Personal Care',
-            [{ title: 'Counselors', path: '#' }, { title: 'Prayer', path: '#' }],
-            'Life Events',
-            [{ title: 'Baptism', path: '#' }, { title: 'Weddings', path: '#' }, { title: 'Funerals', path: '#' }],
-            'Contact',
-            [
-              { title: 'Staff Contacts', path: '#' },
-              { title: 'Ask a Question', path: '#' },
-              { title: 'Request Prayer', path: '#' },
-              { title: 'Jobs', path: '#' }
-            ]
-          ]
+          "title": "All Media",
+          "path": "/media",
+          "top_level": true,
+          "automation-id": "nav-all-media"
         }
-      ];
+      ],
+      "Types",
+      [
+        {
+          "title": "Articles",
+          "path": "/media/articles",
+          "automation-id": "nav-articles"
+        },
+        {
+          "title": "Music",
+          "path": "/media/music",
+          "automation-id": "nav-music"
+        },
+        {
+          "title": "Podcasts",
+          "path": "/media/podcasts",
+          "automation-id": "nav-podcasts"
+        },
+        {
+          "title": "Series",
+          "path": "/media/series",
+          "automation-id": "nav-series"
+        },
+        {
+          "title": "Videos",
+          "path": "/media/videos",
+          "automation-id": "nav-videos"
+        }
+      ],
+      "Topics",
+      [
+        {
+          "title": "Culture",
+          "path": "/media/topics/culture",
+          "automation-id": "nav-culture"
+        },
+        {
+          "title": "Self",
+          "path": "/media/topics/self",
+          "automation-id": "nav-self"
+        },
+        {
+          "title": "Work",
+          "path": "/media/topics/work",
+          "automation-id": "nav-work"
+        },
+        {
+          "title": "Money",
+          "path": "/media/topics/money",
+          "automation-id": "nav-money"
+        }
+      ]
+    ]
+  },
+  {
+    "title": "Find Community",
+    "description": "Groups, camps, serve locally and globally, kids",
+    "background": "//crds-media.imgix.net/...",
+    "children": [
+      "Connect",
+      [
+        {
+          "title": "Groups",
+          "path": "#",
+          "automation-id": "nav-connect-groups"
+        },
+        {
+          "title": "See who is nearby",
+          "path": "#",
+          "automation-id": "nav-connect-see-who-is-nearby"
+        }
+      ],
+      "Camps",
+      [
+        {
+          "title": "Man Camp",
+          "path": "#",
+          "automation-id": "nav-camps-man-camp"
+        },
+        {
+          "title": "Woman Camp",
+          "path": "#",
+          "automation-id": "nav-camps-woman-camp"
+        },
+        {
+          "title": "Couples Camp",
+          "path": "#",
+          "automation-id": "nav-camps-couples-camp"
+        }
+      ],
+      "Serve",
+      [
+        {
+          "title": "Go",
+          "path": "#",
+          "automation-id": "nav-serve-go"
+        },
+        {
+          "title": "Reachout",
+          "path": "#",
+          "automation-id": "nav-serve-reachout"
+        },
+        {
+          "title": "Community Care",
+          "path": "#",
+          "automation-id": "nav-serve-community-care"
+        },
+        {
+          "title": "All service opportunities",
+          "path": "#",
+          "automation-id": "nav-serve-all-service-opportunities"
+        }
+      ],
+      "Kids",
+      [
+        {
+          "title": "Kids' Club",
+          "path": "#",
+          "automation-id": "nav-kids-kids-club"
+        },
+        {
+          "title": "Students 6-12th",
+          "path": "#",
+          "automation-id": "nav-kids-students-612th"
+        }
+      ]
+    ]
+  },
+  {
+    "title": "Come Visit",
+    "description": "Locations, (in person and online)",
+    "background": "//crds-media.imgix.net/...",
+    "automation-id": "nav-kids-students-612",
+    "children": [
+      [
+        { "title": "All Locations", "path": "#", "top_level": true, "automation-id": "nav-all-locations" },
+        { "title": "Crossroads Anywhere", "path": "#", "top_level": true, "automation-id": "nav-crossroads-anywhere" }
+      ],
+      "Cincinnati Area",
+      [
+        {
+          "title": "East Side",
+          "path": "#",
+          "automation-id": "nav-location-east-side"
+        },
+        {
+          "title": "Florence",
+          "path": "#",
+          "automation-id": "nav-location-east-side"
+        },
+        {
+          "title": "Mason",
+          "path": "#",
+          "automation-id": "nav-location-mason"
+        },
+        {
+          "title": "Oakley",
+          "path": "#",
+          "automation-id": "nav-location-oakely"
+        },
+        {
+          "title": "Oxford",
+          "path": "#",
+          "automation-id": "nav-location-oxford"
+        },
+        {
+          "title": "Uptown",
+          "path": "#",
+          "automation-id": "nav-location-uptown"
+        },
+        {
+          "title": "West Side",
+          "path": "#",
+          "automation-id": "nav-location-west-side"
+        }
+      ],
+      "Central Kentucky Area",
+      [
+        {
+          "title": "Lexington",
+          "path": "#",
+          "automation-id": "nav-location-lexington"
+        },
+        {
+          "title": "Downtown Lexington",
+          "path": "#",
+          "automation-id": "nav-location-downtown-lexington"
+        },
+        {
+          "title": "Georgetown",
+          "path": "#",
+          "automation-id": "nav-location-georgetown"
+        },
+        {
+          "title": "Dayton",
+          "path": "#",
+          "automation-id": "nav-location-dayton"
+        }
+      ],
+      "More in Ohio",
+      [
+        {
+          "title": "Columbus",
+          "path": "#",
+          "automation-id": "nav-location-columbus"
+        },
+        {
+          "title": "Dayton",
+          "path": "#",
+          "automation-id": "nav-location-more-dayton"
+        }
+      ],
+      "Correctional Institutions",
+      [
+        {
+          "title": "Blackburn Correctional Complex",
+          "path": "#",
+          "automation-id": "nav-location-blckburn-correctional-complex"
+        },
+        {
+          "title": "Dayton Correctional Institution",
+          "path": "#",
+          "automation-id": "nav-location-dayton-correctional-institution"
+        },
+        {
+          "title": "Lebanon Correctional Institution",
+          "path": "#",
+          "automation-id": "nav-location-lebanon-correctional-institution"
+        },
+        {
+          "title": "London Correctional Institution",
+          "path": "#",
+          "automation-id": "nav-location-london-correctional-institution"
+        },
+        {
+          "title": "Marion Correctional Institution",
+          "path": "#",
+          "automation-id": "nav-location-marion-correctional-institution"
+        },
+        {
+          "title": "Ohio Reformatory for Women",
+          "path": "#",
+          "automation-id": "nav-location-ohio-reformatory-for-women"
+        },
+        {
+          "title": "Warren Correctional Institution",
+          "path": "#",
+          "automation-id": "nav-location-warren-correctional-institution"
+        }
+      ]
+    ]
+  },
+  {
+    "title": "Get Support",
+    "description": "Counselors, prayer, live events, contact",
+    "background": "//crds-media.imgix.net/...",
+    "children": [
+      "Personal Care",
+      [
+        {
+          "title": "Counselors",
+          "path": "#",
+          "automation-id": "nav-support-counselors"
+        },
+        {
+          "title": "Prayer",
+          "path": "#",
+          "automation-id": "nav-support-counselors"
+        }
+      ],
+      "Life Events",
+      [
+        {
+          "title": "Baptism",
+          "path": "#",
+          "automation-id": "nav-support-baptism"
+        },
+        { "title": "Weddings", "path": "#", "automation-id": "nav-support-weddings" },
+        {
+          "title": "Funerals",
+          "path": "#",
+          "automation-id": "nav-support-funerals"
+        }
+      ],
+      "Contact",
+      [
+        {
+          "title": "Staff Contacts",
+          "path": "#",
+          "automation-id": "nav-support-staff-contacts"
+        },
+        {
+          "title": "Ask a Question",
+          "path": "#",
+          "automation-id": "nav-support-ask-a-question"
+        },
+        {
+          "title": "Request Prayer",
+          "path": "#",
+          "automation-id": "nav-support-request-prayer"
+        },
+        {
+          "title": "Jobs",
+          "path": "#",
+          "automation-id": "nav-support-jobs"
+        }
+      ]
+    ]
+  }
+]
+;
     </script>
   </body>
 </html>
